# massive-community

./: .gitignore  AGENTS.md  LICENSE  README-OG.md  README.md  environment.yml
examples/rest/gpt5-openai-agents-sdk-massive-mcp/: README.md  env.example  main.py  pyproject.toml
examples/rest/gpt5-openai-agents-sdk-massive-mcp/reports/equities/: example.md
examples/rest/market-parser-massive-mcp/: .env_example  README.md  market_parser_demo.py  pyproject.toml
examples/rest/options-0-dte-covered-call/: README.md  env.example  pyproject.toml  screener.py
examples/rest/options-advanced-covered-call/: README.md  pyproject.toml  screener.py
examples/rest/options-iron-condor/: .env.example  README.md  iron_condor_plan.md  normalization.sql  pyproject.toml  screener.py
examples/rest/options-iron-condor/notebooks/: Simulate-Collar.ipynb  Simulate-IronCondor.ipynb  contracts-explorer.ipynb
examples/rest/options-iron-condor/og/: README.md  contract_fetcher.py  duckdb_cheat_sheet.txt  main.py
examples/rest/options-iron-condor/og/fetchers/: __init__.py  contracts.py  duckdb_option_quote_fetcher.py  (+4 more)
examples/rest/options-iron-condor/tests/: test_screener.py
examples/rest/partner-etf-global/: .env.example  README.md  pyproject.toml  streamlit_app.py
og/: README.md  main.py  pyproject.toml
og/fetchers/: __init__.py  massive_contract_fetcher.py
og/models/: condor_sampling.py  iron_condor.py  market_data.py  quotes.py
og/simulations/: closeout.py
og/snapshots/: reporting.py
og/utils/: condor_helpers.py  conversions.py  db_tools.py  formatting.py  sql_tools.py
(+4 files in other folders)
